<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rückfallprophylaxe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_diary">Tagebuch</string>
    <string name="btn_tagebuch">Tagebuch</string>
    <string name="action_newEntry">Neuer Eintrag</string>
    <string name="title_activity_new_entry">Eintrag hinzufügen</string>
    <string name="action_addAttachment">Bild hinzufügen</string>
    <string name="action_createEntry">Eintrag speichern</string>
    <string name="title_hint">Titel</string>
    <string name="entry_hint">Eintrag</string>
    <string-array name="mood_array">
        <item>Angst</item>
        <item>Aggression</item>
        <item>Einsamkeit</item>
        <item>Frust</item>
        <item>Gut</item>
        <item>Langeweile</item>
        <item>Suchtdruck</item>
    </string-array>
    <string name="how_you_feel">Wie fühlst du dich heute?</string>
    <string name="textMood">Stimmung:</string>
    <string name="label_adress">Adresse:</string>
    <string name="label_phone">Telefonnummer:</string>
    <string name="label_mail">E-Mail:</string>
    <string name="btn_show_on_map">Auf Karte anzeigen</string>
    <string name="btn_anlaufstellen">Anlaufstellen</string>
    <string name="title_activity_contactpoint_map">Anlaufstellen Karte</string>
    <string name="title_activity_contactpoint_list">Anlaufstellen Liste</string>
    <string name="btn_notfallkoffer">Notfallkoffer</string>
    <string name="btn_ablenkungen">Ablenkungen</string>
    <string name="title_activity_emotion">EmotionActivity</string>
    <string name="title_activity_distraction">DistractionActivity</string>
     <string name="ermutigungs_text">Hier könnte der Text, der zur Ermutigung
         beitragen soll stehen oder so.</string>
    <string name="wuetend_button">Wütend</string>
    <string name="Ablenkung_button">Ablenkung</string>
    <string name="MP3_button">Musik</string>
    <string name="Spiele_button">Spiele oder Apps</string>
    <string name="title_activity_ablenkung_wuetend">Ablenkung_wuetend</string>
    <string name="Ablekung1">Mandala malen</string>
    <string name="Ablekung2">Laufen gehen</string>
    <string name="Ablekung3">Fitnessstudio</string>
    <string name="Ablekung4">Computer spielen</string>
    <string name="title_activity_koffer">Notfall Koffer</string>
    <string name="title_activity_koffer2">Notfall Koffer 2</string>
    <string name="btn_saveDiaryEntry">Speichern</string>
    <string name="title_password_determine">Passwort erstellen</string>
    <string name="title_password_verify">Rückfallprophylaxe</string>
    <string name="toast_thats_no_email">Das ist keine E-mailadresse</string>
    <string name="toast_no_token_entered">Bitte Token angeben</string>
    <string name="toast_pins_not_equal">PIN\'s unterscheiden sich</string>
    <string name="toast_incorrect_pin">PIN muss aus 4 Ziffern bestehen</string>
    <string name="toast_something_went_wrong">Etwas lief falsch</string>
    <string name="toast_email_not_found">Email wurde nicht gefunden</string>
    <string name="toast_incorrect_token">Der Token ist falsch</string>
    <string name="toast_token_was_used">Der Token wurde bereits verwendet</string>
    <string name="toast_data_inclompete">Daten nicht komplett</string>
    <string name="toast_register_successfull">Das Anmelden war erfolgreich</string>
    <string name="ready">Fertig</string>
    <string name="data_loading">Deine Daten werden eingerichtet...</string>
    <string name="safety_actions">Ich tue etwas was mir hilft</string>
    <string name="safety_thoughts">Ich denke an etwas was mir hilft</string>
    <string name="help_people">Ich brauche Hilfe</string>
    <string name="notfall">Notfall</string>
    <string name="title_activity_koffer3">Notfall Koffer 3</string>
    <string name="limit_relapse">Meine Notfallschritte um 2. Glas zu verhindern:</string>
    <string name="pin_reenter">PIN wiederholen:</string>
    <string name="pin_create">PIN erstellen:</string>
    <string name="btn_submit">Bestätigen</string>
    <string name="label_token">Token:</string>
    <string name="label_pin">PIN</string>
    <string name="btn_map">Karte</string>
    <string name="btn_call">Anruf</string>
    <string name="network_unavailable">Keine Internetverbindung verfügbar</string>
    <string name="action_update_contactpoints">Aktualisieren</string>
    <string name="action_search">Suche</string>
    <string name="diary_deleteEntry">Eintrag löschen</string>
    <string name="diary_deleteEntryConfirm">Bestätigen</string>
	<string name="diary_deleteEntrySuccess">Eintrag wurde gelöscht</string>
	<string name="diary_editPictureTitle">Bearbeiten</string>
	<string name="diary_editPictureRemove">Bild entfernen</string>
	<string name="diary_saveSuccess">Eintrag wurde gespeichert</string>
	<string name="diary_addPictureChooseSource">Bildquelle wählen</string>
	<string name="diary_errorTitle">Fehler</string>
	<string name="diary_addPictureTooMany">Zulässige Anzahl von Bildern überschritten</string>
	<string name="diary_addPictureTooManyExpl">Das ist ein Bild zuviel. Es sind maximal %d Bilder erlaubt.</string>
	<string name="lbl_distractions">Hier ein paar Ablenkungsmöglichkeiten:</string>
	<string name="title_contactpoint_view">Anlaufstellen</string>
	<string name="lbl_music">Oder hör doch einfach ein wenig</string>
	<string name="bild_ausgewaehlt">Bild ausgewählt</string>
	<string name="mein_e_therapeut_in_">"mein/e Therapeut/in: "</string>
	<string name="risiko_">Risiko \n</string>
	<string name="ich_bin_in_gefahr_wieder_zur_flasche_zu_greifen_wenn_ich_">"Ich bin in Gefahr, wieder zur Flasche zu greifen:\n wenn ich ... "</string>
	<string name="diese_situation_ist_schwierig_f_r_mich_weil_">"Diese Situation ist schwierig für mich, weil ... : "</string>
	<string name="_versuchung_der_kleine_teufel_auf_meiner_schulter_fl_stert_mir_zu_trink_doch_ein_gl_schen_dann_">"\"Versuchung\": Der \"kleine Teufel\" auf meiner Schulter flüstert mir zu:\n \"Trink doch ein Gläschen, dann ... "</string>
	<string name="der_versuchung_widerstehen_">Der Versuchung widerstehen \n</string>
	<string name="_bew_ltigungsgedanken_der_kleine_engel_auf_meiner_schulter_sagt_mir_nein_wenn_du_trinkst_dann_">"(Bewältigungsgedanken)  Der \"kleine Engel\" auf meiner Schulter sagt mir: \n \"Nein, wenn du trinkst, dann ... "</string>
	<string name="in_deiner_abstinenz_hast_du_schon_viel_erreicht_z_b_">In deiner Abstinenz hast du schon viel erreicht, z.B. ...</string>
	<string name="_bew_ltigungsverhalten_was_kann_ich_tun_um_meine_abstinenz_zu_sch_tzen_">"(Bewältigungsverhalten) \n Was kann ich tun, um meine Abstinenz zu schützen? ...  "</string>
	<string name="sucht_drogenhotline_anrufen_">Sucht-+Drogenhotline anrufen\n</string>
	<string name="tel_">tel:</string>
	<string name="prop_beratungstelle_anrufen_">Prop Beratungstelle anrufen\n</string>
</resources>
