<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DistractionActivity" >

<TextView
        android:id="@+id/Mandala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ablekung1" />
    <TextView
        android:id="@+id/Laufen"
        android:layout_below="@id/Mandala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ablekung2" />
     <TextView
        android:id="@+id/Fitness"
        android:layout_below="@id/Laufen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ablekung3" />
      <TextView
        android:id="@+id/Computer"
        android:layout_below="@id/Fitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ablekung4" />

</RelativeLayout>
