<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/btnNotfallkoffer"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnTagebuch"
        android:layout_below="@+id/btnAblenkungen"
        android:layout_marginTop="20dp"
        android:onClick="callNotfallkoffer"
        android:text="@string/btn_notfallkoffer" />

    <Button
        android:id="@+id/btnAnlaufstellen"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnTagebuch"
        android:layout_below="@+id/btnNotfallkoffer"
        android:layout_marginTop="40dp"
        android:onClick="callAnlaufstellen"
        android:text="@string/btn_anlaufstellen" />

    <Button
        android:id="@+id/btnAblenkungen"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnTagebuch"
        android:layout_below="@+id/btnTagebuch"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:onClick="callEmotion"
        android:text="@string/btn_ablenkungen" />

    <Button
        android:id="@+id/btnTagebuch"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="callTagebuch"
        android:text="@string/btn_tagebuch" />

</RelativeLayout>
