<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:textColor="@android:color/black">


        
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_people"
              android:id="@+id/textView2" android:layout_weight="1"
              android:textColor="@android:color/black"/>
    <ListView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/help_people" android:layout_weight="3" android:layout_marginLeft="50dp"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/safety_actions"
            android:id="@+id/textView" android:layout_weight="1"
            android:textColor="@android:color/black"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/safety_actions" android:layout_weight="3" android:layout_marginLeft="50dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/safety_thoughts"
              android:id="@+id/Aufforderung1" android:layout_weight="1"
              android:textColor="@android:color/black"/>
    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" 
            android:id="@+id/safety_thoughts" android:layout_weight="3" android:layout_marginLeft="50dp"
            />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/limit_relapse"
              android:layout_weight="1"
              android:textColor="@android:color/black"/>
    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" 
            android:id="@+id/limit_relapse" android:layout_weight="3" android:layout_marginLeft="50dp"
            />

</LinearLayout>