<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dataLoadingLabel"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/street"
        android:inputType="textCapCharacters|number" />

    <TextView
        android:id="@+id/Aufforderung1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/street"
        android:layout_below="@+id/editTextToken"
        android:layout_marginTop="15dp"
        android:text="@string/pin_create" />

    <EditText
        android:id="@+id/editTextPin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Aufforderung1"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:width="80dp" />

    <TextView
        android:id="@+id/Aufforderung2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Aufforderung1"
        android:layout_alignBottom="@+id/Aufforderung1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/editTextPin1"
        android:text="@string/pin_reenter" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="15dp"
        android:text="@string/label_token" />

    <TextView
        android:id="@+id/dataLoadingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_mail" />

    <EditText
        android:id="@+id/editTextPin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextPin1"
        android:layout_alignBottom="@+id/editTextPin1"
        android:layout_alignLeft="@+id/Aufforderung2"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:width="80dp" />

    <Button
        android:id="@+id/best_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextPin2"
        android:layout_marginTop="15dp"
        android:text="@string/btn_submit" />

    <ProgressBar
        android:id="@+id/passVerifyProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/best_button"
        android:layout_toLeftOf="@+id/best_button" />

</RelativeLayout>